# viewskater

./: .gitignore  BUNDLING.md  Cargo.toml  README.md  build.rs
docs/: replay.md
resources/linux/: appimage.desktop  viewskater.desktop
resources/macos/: Info.plist  entitlements.plist  viewskater_wrapper.sh
src/: annotation_manager.rs  app.rs  archive_cache.rs  bbox_overlay.rs  build_info.rs  coco_parser.rs  coco_widget.rs  config.rs  exif_utils.rs  file_io.rs  image_cache.rs  loading.rs  loading_handler.rs  loading_status.rs  logging.rs  macos_file_access.rs  main.rs  main_bak.rs  menu.rs  ml_widget.rs  navigation.rs  navigation_keyboard.rs  navigation_slider.rs  pane.rs  render.rs  replay.rs  security_bookmarks.rs  selection_manager.rs  settings.rs  settings_modal.rs  ui.rs  ui_builder.rs  utils.rs  viewer.rs  window_state.rs
src/app/: keyboard_handlers.rs  message.rs  message_handlers.rs  replay_handlers.rs  settings_widget.rs
src/app_module/: message_handlers.rs  mod.rs
src/atlas/: allocation.rs  allocator.rs  atlas.rs  entry.rs  layer.rs  mod.rs
src/cache/: atlas_img_cache.rs  cache_utils.rs  compression.rs  cpu_img_cache.rs  gpu_img_cache.rs  img_cache.rs  mod.rs  texture_cache.rs
src/coco/: annotation_manager.rs  mod.rs  parser.rs  rle_decoder.rs  widget.rs
src/coco/overlay/: bbox_overlay.rs  bbox_shader.rs  bbox_shader.wgsl  mask_shader.rs  mask_shader.wgsl  mod.rs  polygon_shader.rs  polygon_shader.wgsl
src/dualslider/: dualslider.rs  style.rs
src/slider_atlas/: allocation.rs  allocator.rs  atlas.rs  atlas.wgsl  entry.rs  layer.rs  mod.rs  pipeline.rs
src/split/: split.rs  style.rs
src/toggler/: style.rs  toggler.rs
src/utils/: mem.rs  mod.rs  save.rs  timing.rs
src/widgets/: circular.rs  dualslider.rs  easing.rs  loading_overlay.rs  mod.rs  modal.rs  selection_widget.rs  slider_image_shader.rs  split.rs  synced_image_split.rs  toggler.rs  viewer.rs
src/widgets/shader/: atlas_pipeline.rs  atlas_scene.rs  atlas_texture.wgsl  bbox_shader.rs  cpu_scene.rs  image_shader.rs  mod.rs  pipeline.rs  polygon_shader.rs  scene.rs  texture.wgsl  texture_pipeline.rs  texture_scene.rs
