[package]
name = "viewskater"
version = "0.2.0-beta.1"
edition = "2021"
description = "A fast image viewer for browsing large collections of images."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10"
console_log = "1.0"
log = "0.4.20"
tokio = { version = "1.32", features = ["rt", "sync", "macros", "time", "io-util", "fs"] }
rfd = "0.12"
num-traits = "0.2"
alphanumeric-sort = "1.5.3"
image = "0.23"
futures = "0.3"
once_cell = "1.16"
smol_str = "0.2.2"
backtrace = "0.3"
dirs = "5.0"
lazy_static = "1.4"
webbrowser = "0.7"
bytemuck = { version = "1.0", features = ["derive"] }
#iced_wgpu = "0.13.5"
wgpu = "23.0"
pollster = "0.4.0"
tracing-subscriber = "0.3"
guillotiere = "0.6"
chrono = { version = "0.4", features = ["clock"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
iced_custom = { package = "iced", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = [
    "image", "tokio", "svg", "lazy", "wgpu"
] }
iced_winit = { package = "iced_winit", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_wgpu = { package = "iced_wgpu", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_widget = { package = "iced_widget", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = ["wgpu"] }
iced_core = { package = "iced_core", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_runtime = { package = "iced_runtime", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_futures = { package = "iced_futures", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = ["tokio"] }
iced_graphics = { git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_aw = { package = "iced_aw", git = "https://github.com/ggand0/iced_aw.git", branch = "custom-iced-0.11.0", features = [
    "menu", "quad"
] }


[target.'cfg(target_os = "linux")'.dependencies]
# Debug setup with local iced
#iced_custom = { package = "iced", path = "../iced", features=["image", "tokio", "svg", "lazy", "wgpu", "advanced"] }
#iced_winit = { path = "../iced/winit" }
#iced_wgpu = { path = "../iced/wgpu", features = ["image"]}
#iced_widget = { path = "../iced/widget", features = ["wgpu", "image"] }
#iced_core = { path = "../iced/core" }
#iced_runtime = { path = "../iced/runtime" }
#iced_futures = { path = "../iced/futures", features = ["tokio"] }
#iced_aw = { path = "../iced_aw", features = ["menu", "quad"] }

# Use custom iced
iced_custom = { package = "iced", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = [
    "image", "tokio", "svg", "lazy", "wgpu"
] }
iced_winit = { package = "iced_winit", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_wgpu = { package = "iced_wgpu", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_widget = { package = "iced_widget", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = ["wgpu"] }
iced_core = { package = "iced_core", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_runtime = { package = "iced_runtime", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_futures = { package = "iced_futures", git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1", features = ["tokio"] }
iced_graphics = { git = "https://github.com/ggand0/iced.git", branch = "custom-winit-0.13.1" }
iced_aw = { package = "iced_aw", git = "https://github.com/ggand0/iced_aw.git", branch = "custom-iced-0.11.0", features = [
    "menu", "quad"
] }

[dev-dependencies]
cargo-bundle = "0.6.0"

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "view_skater.exe"
FileDescription = "A fast image viewer for browsing large collections of images."

[package.metadata.bundle]
name = "ViewSkater"
identifier = "com.ggando.viewskater"
icon = ["assets/icon_16.png", "assets/icon_32.png", "assets/icon_48.png", "assets/icon_128.png", "assets/icon_256.png"]
short_description = "A fast image viewer for browsing large collections of images."
