[package]
name = "viewskater"
version = "0.2.5"
edition = "2021"
description = "A fast image viewer for browsing large collections of images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10"
console_log = "1.0"
log = "0.4.20"
tokio = { version = "1.32", features = ["rt", "sync", "macros", "time", "io-util", "fs"] }
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
num-traits = "0.2"
alphanumeric-sort = "1.5.3"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "ico", "tiff", "webp", "pnm", "qoi", "tga"
] }
futures = "0.3"
once_cell = "1.16"
smol_str = "0.2.2"
backtrace = "0.3"
dirs = "5.0"
webbrowser = "0.7"
bytemuck = { version = "1.0", features = ["derive"] }
earcutr = "0.4"
chrono = { version = "0.4", features = ["clock"] }
memmap2 = "0.9.5"
rayon = "1.8"
texpresso = { version = "2.0.1", features = ["rayon"] }
sysinfo = "0.33.1"
libc = "0.2"
zip = "4"
unrar = "0.5"
sevenz-rust2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"

# Use custom iced
iced_custom = { package = "iced", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = [
    "image", "tokio", "svg", "lazy", "wgpu"
] }
iced_winit = { package = "iced_winit", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_wgpu = { package = "iced_wgpu", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_widget = { package = "iced_widget", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = ["wgpu"] }
iced_core = { package = "iced_core", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_runtime = { package = "iced_runtime", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_futures = { package = "iced_futures", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = ["tokio"] }
iced_graphics = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_aw = { package = "iced_aw", git = "https://github.com/ggand0/iced_aw.git", branch = "custom-0.11.0", features = [
    "menu", "quad", "tabs"
] }

# Debug setup with local iced
#iced_custom = { package = "iced", path = "../iced", features=["image", "tokio", "svg", "lazy", "wgpu", "advanced"] }
#iced_winit = { path = "../iced/winit" }
#iced_wgpu = { path = "../iced/wgpu", features = ["image"]}
#iced_widget = { path = "../iced/widget", features = ["wgpu", "image"] }
#iced_core = { path = "../iced/core" }
#iced_runtime = { path = "../iced/runtime" }
#iced_futures = { path = "../iced/futures", features = ["tokio"] }
#iced_aw = { path = "../iced_aw", features = ["menu", "quad"] }

[features]
# ML-related features for dataset curation (disabled by default)
ml = []
# COCO dataset visualization (disabled by default)
coco = []

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSUserDefaults",
] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "std",
] }


# Used on macOS for generating .app bundles via `cargo bundle`
[target.'cfg(target_os = "macos")'.dev-dependencies]
cargo-bundle = "0.6.0"

[build-dependencies]
winres = "0.1.12"
chrono = { version = "0.4", features = ["clock"] }

[package.metadata.winres]
OriginalFilename = "view_skater.exe"
FileDescription = "A fast image viewer for browsing large collections of images."

[package.metadata.bundle]
name = "ViewSkater"
identifier = "com.ggando.viewskater"
icon = ["assets/ViewSkater.icns"]
short_description = "A fast image viewer for browsing large collections of images."

[profile.release]
lto = "fat"
codegen-units = 1

# Use an optimized dev profile for faster runtime during development.
[profile.dev]
opt-level = 3
lto = false
codegen-units = 16

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16