[package]
name = "viewskater"
version = "0.3.1"
edition = "2021"
description = "A fast image viewer for browsing large collections of images."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.10"
console_log = "1.0"
log = "0.4.20"
tokio = { version = "1.32", features = ["rt", "sync", "macros", "time", "io-util", "fs"] }
smol = "2.0"
rfd = { version = "0.12", default-features = false, features = ["xdg-portal"] }
native-dialog = "0.7"
num-traits = "0.2"
alphanumeric-sort = "1.5.3"
image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "ico", "tiff", "webp", "pnm", "qoi", "tga"
] }
futures = "0.3"
once_cell = "1.16"
smol_str = "0.2.2"
backtrace = "0.3"
dirs = "5.0"
webbrowser = "0.7"
bytemuck = { version = "1.0", features = ["derive"] }
earcutr = "0.4"
lyon_algorithms = "1.0"
chrono = { version = "0.4", features = ["clock"] }
memmap2 = "0.9.5"
rayon = "1.8"
texpresso = { version = "2.0.1", features = ["rayon"] }
sysinfo = "0.33.1"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
zip = "4"
unrar = "0.5"
sevenz-rust2 = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
arboard = { version = "3", features = ["image-data"] }
jpeg2k = { version = "0.10", optional = true, features = ["image"] }

# Custom iced (direct deps)
iced_custom = { package = "iced", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = [
    "image", "tokio", "svg", "lazy", "wgpu"
] }
iced_winit = { package = "iced_winit", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_wgpu = { package = "iced_wgpu", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_widget = { package = "iced_widget", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = ["wgpu", "canvas"] }
iced_core = { package = "iced_core", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_runtime = { package = "iced_runtime", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_futures = { package = "iced_futures", git = "https://github.com/ggand0/iced.git", branch = "custom-0.13", features = ["tokio"] }
iced_graphics = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
# Upstream iced_aw -- iced deps overridden via [patch.crates-io] below
iced_aw = { package = "iced_aw", git = "https://github.com/iced-rs/iced_aw.git", tag = "v.0.11.0", default-features = false, features = [
    "menu", "quad", "tabs"
] }

# Override iced crates from crates.io (used by iced_aw and iced_fonts) with custom fork
[patch.crates-io]
iced = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_core = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_widget = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_runtime = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_renderer = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_futures = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_graphics = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_wgpu = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_tiny_skia = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
iced_winit = { git = "https://github.com/ggand0/iced.git", branch = "custom-0.13" }
# Local iced development: uncomment below, comment above
#iced = { path = "../iced" }
#iced_core = { path = "../iced/core" }
#iced_widget = { path = "../iced/widget" }
#iced_runtime = { path = "../iced/runtime" }
#iced_renderer = { path = "../iced/renderer" }
#iced_futures = { path = "../iced/futures" }
#iced_graphics = { path = "../iced/graphics" }
#iced_wgpu = { path = "../iced/wgpu" }
#iced_tiny_skia = { path = "../iced/tiny_skia" }
#iced_winit = { path = "../iced/winit" }

[features]
# Image selection/curation features for dataset preparation (disabled by default)
selection = []
# COCO dataset visualization (disabled by default)
coco = []
# JPEG 2000 support (disabled by default)
jp2 = ["dep:jpeg2k"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2", features = ["relax-sign-encoding"] }
block2 = "0.5"
objc2-foundation = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSUserDefaults",
    "NSNotification",
    "NSString",
    "NSOperation",
    "block2",
] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSScreen",
] }


# Used on macOS for generating .app bundles via `cargo bundle`
[target.'cfg(target_os = "macos")'.dev-dependencies]
cargo-bundle = "0.6.0"

[build-dependencies]
winres = "0.1.12"
chrono = { version = "0.4", features = ["clock"] }

[package.metadata.winres]
OriginalFilename = "view_skater.exe"
FileDescription = "A fast image viewer for browsing large collections of images."

[package.metadata.bundle]
name = "ViewSkater"
identifier = "com.ggando.viewskater"
icon = ["assets/ViewSkater.icns"]
short_description = "A fast image viewer for browsing large collections of images."

[package.metadata.appimage]
desktop_entry = "./resources/linux/appimage.desktop"

[profile.release]
lto = "fat"
codegen-units = 1

# Use an optimized dev profile for faster runtime during development.
[profile.dev]
opt-level = 3
lto = false
codegen-units = 16

[profile.opt-dev]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16